--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
       <div class="row">
         <div class="col s12 m4">
           <h6 class="center">
-            <a href="http://www.theverge.com">The Verge</a>
+            <a href="http://Books.Hellaz.EU">Books Online</a>
           </h6>
-          <div id="rss-theverge"></div>
+          <div id="rss-books"></div>
         </div>
         <div class="col s12 m4">
           <h6 class="center">
-            <a href="http://www.androidpolice.com">Android Police</a>
+            <a href="http://Movies.Hellaz.EU">Movies Online</a>
           </h6>
-          <div id="rss-androidpolice"></div>
+          <div id="rss-movies"></div>
         </div>
         <div class="col s12 m4">
           <h6 class="center">
-            <a href="http://www.arstechnica.com">Ars Technica</a>
+            <a href="http://Scripts.Hellaz.EU">Scripts Online</a>
           </h6>
-          <div id="rss-ars"></div>
+          <div id="rss-scripts"></div>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
     <div class="footer-copyright">
       <div class="container">
         <center>
-          <a class="grey-text text-lighten-4" href="#!">NPv5 x ARKTS</a>
+          <a class="grey-text text-lighten-4" href="#!">Hellaz.Team @ NPv5 x ARKTS</a>
         </center>
       </div>
     </div>
