--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
   <main>
     <div class="container">
 
-      <br>
-      <br>
-      <br>
+<br>
+		<div class="Panel" id='SearchBars'>
+
+			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
+				<a href='http://www.encrypted.google.com'><img src='Icons/google.svg'/></a>
+				<input type="text" name="q" placeholder="Google" class="search">
+			</form>
+		</div>
+    <br>
 
       <div class="row">
         <div class="col s12 m6 l3">
