--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="Panel" id='SearchBars'>
 
 			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
-				<a href='http://www.encrypted.google.com'><img src='Icons/google.svg'/></a>
+				<a href='http://www.encrypted.google.com'><img src='img/hellaz_120.jpg'/></a>
 				<input type="text" name="q" placeholder="Google" class="search">
 			</form>
 		</div>
