--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
         <div class="col s12 m6 l3">
           <h6 class="center">Feed</h6>
           <span>
-            <a target="_parent" href="http://www.reddit.com">Reddit</a>
+            <a target="_parent" href="http://www.in.gr">In.GR</a>
           </span>
           <span>
-            <a target="_parent" href="http://www.omgubuntu.co.uk">OMGUbuntu</a>
+            <a target="_parent" href="http://Lifo.gr">LIFO</a>
           </span>
           <span>
-            <a target="_parent" href="http://www.lpassociation.com">LPA</a>
+            <a target="_parent" href="https://protothema.gr">ProtoThema</a>
           </span>
           <span>
-            <a target="_parent" href="http://www.arstechnica.com">ARS Technica</a>
+            <a target="_parent" href="http://Iefimerida.gr">Iefimerida.gr</a>
           </span>
           <span>
-            <a target="_parent" href="http://www.theverge.com">The Verge</a>
+            <a target="_parent" href="http://Newsit.gr">Newsit.gr</a>
           </span>
           <span>
-            <a target="_parent" href="http://www.androidpolice.com/">Android Police</a>
+            <a target="_parent" href="http://News247.gr/">News247.gr</a>
           </span>
         </div>
 
@@ -63,19 +63,25 @@
             <a target="_parent" href="https://outlook.live.com/owa/" class="collection-item">Outlook</a>
           </span>
           <span>
+            <a target="_parent" href="https://yahoo.com" class="collection-item">Yahoo</a>
+          </span>
+          <span>
             <a target="_parent" href="https://drive.google.com/drive/u/0/my-drive" class="collection-item">Drive</a>
+          </span>
+          <span>
+            <a target="_parent" href="https://pcloud.com/#page=register&invite=EQRwZpdnRok" class="collection-item">Pcloud</a>
           </span>
           <span>
             <a target="_parent" href="https://drive.google.com/keep" class="collection-item">Keep</a>
           </span>
           <span>
-            <a target="_parent" href="https://www.google.com/maps/dir/37.3350323,-121.8783668/3906+Casanova+Dr,+San+Mateo,+CA+94403,+USA/">GoHome</a>
+            <a target="_parent" href="https://www.google.com/maps/">Go Home</a>
           </span>
           <span>
-            <a target="_parent" href="https://www.wellsfargo.com/" class="collection-item">WF</a>
+            <a target="_parent" href="http://Skroutz.gr" class="collection-item">Skroutz</a>
           </span>
           <span>
-            <a target="_parent" href="https://www.chase.com/" class="collection-item">Chase</a>
+            <a target="_parent" href="https://www.netz.gr" class="collection-item">Free Host</a>
           </span>
         </div>
 
@@ -93,15 +99,21 @@
           <span>
             <a target="_parent" href="http://www.twitter.com" class="collection-item">Twitter</a>
           </span>
+	  <span>
+            <a target="_parent" href="http://www.instagram.com" class="collection-item">Instagram</a>
+          </span>
+	  <span>
+            <a target="_parent" href="http://www.linkedin.com" class="collection-item">LinkedIn</a>
+          </span>
         </div>
 
         <div class="col s12 m6 l3">
           <h6 class="center">Messenger</h6>
           <span>
-            <a target="_parent" href="https://web.telegram.org/#/im" class="collection-item">Telegram</a>
+            <a target="_parent" href="https://web.whatsapp.com/" class="collection-item">WhatsApp</a>
           </span>
           <span>
-            <a target="_parent" href="https://web.whatsapp.com/" class="collection-item">WhatsApp</a>
+            <a target="_parent" href="https://web.telegram.org/#/im" class="collection-item">Telegram</a>
           </span>
           <span>
             <a target="_parent" href="https://www.messenger.com/" class="collection-item">Messenger</a>
