--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>NPv5 </title>
+  <title>Hellaz.Team </title>
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
@@ -26,7 +26,8 @@
 
 			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
 				<a href='http://www.encrypted.google.com'><img src='img/hellaz_120.jpg'/></a>
-				<input type="text" name="q" placeholder="Google" class="search">
+<script async src="https://cse.google.com/cse.js?cx=partner-pub-3269987799484354:v593sqmuewv"></script>
+<div class="gcse-searchbox-only"></div>
 			</form>
 		</div>
     <br>
