--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 
 <br>
 		<div class="Panel" id='SearchBars'>
-
+<script async src="https://cse.google.com/cse.js?cx=002101683405692130004:yg2f_o5al9c"></script>
 			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
 				<a href='http://www.encrypted.google.com'><img src='img/hellaz_120.jpg'/></a>
-<script async src="https://cse.google.com/cse.js?cx=partner-pub-3269987799484354:v593sqmuewv"></script>
-<div class="gcse-searchbox-only"></div>
 			</form>
+<div class="gcse-searchbox-only"></div>
 		</div>
     <br>
 
