--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
 <body>
   <main>
     <div class="container">
-
+<center>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-3269987799484354";
+/* 468x60, created 04/01/08 adserver */
+google_ad_slot = "5504191706";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</center>
 <br>
 		<div class="Panel" id='SearchBars'>
 <script async src="https://cse.google.com/cse.js?cx=002101683405692130004:yg2f_o5al9c"></script>
