--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 		<div class="Panel" id='SearchBars'>
 <script async src="https://cse.google.com/cse.js?cx=002101683405692130004:yg2f_o5al9c"></script>
 			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
-				<a href='http://www.encrypted.google.com'><img src='img/hellaz_120.jpg'/></a>
+				<a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a>
 			</form>
 <div class="gcse-searchbox-only"></div>
 		</div>
