--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script async src="https://cse.google.com/cse.js?cx=002101683405692130004:yg2f_o5al9c"></script>
 			<form class='tile searchBar' method="get" action="https://www.encrypted.google.com/search" target="_blank">
 				<a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a>
-				<p align="right">
+				<div align="right">
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-3269987799484354";
 /* 468x60, created 04/01/08 adserver */
@@ -38,7 +38,7 @@ google_ad_height = 60;
 <script type="text/javascript"
 src="//pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-</p>
+</div>
 			</form>
 <div class="gcse-searchbox-only"></div>
 		</div>
