--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
  
   <footer class="main-footer">
     <div class="grid-wrapper">
-      <p>&copy; 2019 StartPage by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
+      <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <button id="myBtn">instructions</button>
         <select class="lang_selector">
 		  <option value="el">Ελληνικά</option>
@@ -196,9 +196,9 @@
         </select>
       </p>
 		<p>
-		<div class="disclaimer">All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</div></p> 
-	  <!-- Go to www.addthis.com/dashboard to customize your tools -->
-             <div class="addthis_inline_share_toolbox"></div>
+		<div class="disclaimer">All product names, logos, and brands are property of their respective owners.</div></p> 
+	  <!-- Go to www.addthis.com/dashboard to customize your tools 
+             <div class="addthis_inline_share_toolbox"></div>-->
     </div>
      
             
@@ -247,10 +247,6 @@ window.onclick = function(event) {
 </script>
 	
 <!--Start Cookie Script--> <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> <!--End Cookie Script-->
-	
-	<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5dcfe437df049fc3"></script>
-
 </body>
 
 </html>
