--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   <footer class="main-footer">
     <div class="grid-wrapper">
       <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
-<button id="myBtn">instructions</button>
+<button id="myBtn">Instructions</button> <div class="disclaimer">All product names, logos, and brands are property of their respective owners.</div></p>
         <select class="lang_selector">
 		  <option value="el">Ελληνικά</option>
 		  <option value="en">English</option>
@@ -196,9 +196,8 @@
         </select>
       </p>
 		<p>
-		<div class="disclaimer">All product names, logos, and brands are property of their respective owners.</div></p> 
-	  <!-- Go to www.addthis.com/dashboard to customize your tools 
-             <div class="addthis_inline_share_toolbox"></div>-->
+		 </p>
+
     </div>
      
             
