--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta property="og:image" content="image.png" />
   <!-- CSS  -->
   <link rel="icon" type="image/png" href="img/favicon.ico"> 
-  <link rel="stylesheet" href="css/style.1.0.2.css">
+  <link rel="preload" href="css/style.1.0.2.css" as="style" onload="this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="css/style.1.0.2.css"></noscript>
+  <!--<link rel="stylesheet" href="css/style.1.0.2.css"> -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f9a823940e.js" crossorigin="anonymous"></script>
   <!--[if lt IE 9]>
