--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="grid-wrapper">
       <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions</button> <div class="disclaimer">All product names, logos, and brands are property of their respective owners.</div></p>
-        <select class="lang_selector">
+        <select class="lang_selector" align="right">
 		  <option value="el">Ελληνικά</option>
 		  <option value="en">English</option>
           <option value="ru">Русский</option>
@@ -247,7 +247,7 @@ window.onclick = function(event) {
 }
 </script>
 	
-<!--Start Cookie Script--> <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> <!--End Cookie Script-->
+<!--Start Cookie Script <script type="text/javascript" charset="UTF-8" src="//eu.cookie-script.com/s/6130ac72ad1ba8f1e93ad4e9fed7f10d.js"></script> <!--End Cookie Script-->
 </body>
 
 </html>
