--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <footer class="main-footer">
     <div class="grid-wrapper">
       <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
-<button id="myBtn">Instructions</button> <div class="disclaimer">All product names, logos, and brands are property of their respective owners.</div></p>
+<button id="myBtn">Instructions</button>
         <select class="lang_selector" align="right">
 		  <option value="el">Ελληνικά</option>
 		  <option value="en">English</option>
