--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
  
   <footer class="main-footer">
     <div class="grid-wrapper">
-      <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a onclick="" href="http://urlz.gr" class="сonfident_text" target="_blank">Privacy Policy</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
-<button id="myBtn">Instructions</button>
+      <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
+<button id="myBtn">Instructions & Privacy</button>
         <select class="lang_selector" align="right">
 		  <option value="el">Ελληνικά</option>
 		  <option value="en">English</option>
@@ -207,6 +207,8 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
+	<p>All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</p>
+
     <p><strong>This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you could delete all the saved sites, what you see here is not online and is not shared.</strong><br><br>
 	  1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to the image and click on the "X".<br><br>
 	  2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL, done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the same PC.<br><br>
