--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -178,8 +178,10 @@
  
   <footer class="main-footer">
     <div class="grid-wrapper">
-      <p>&copy; 2019 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
-<button id="myBtn">Instructions & Privacy</button>
+      <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
+<!--<button id="myBtn">Instructions & Privacy</button>-->
+  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Privacy & Instructions</a>
+
         <select class="lang_selector" align="right">
 		  <option value="el">Ελληνικά</option>
 		  <option value="en">English</option>
@@ -202,6 +204,20 @@
 
 
 <!-- The Modal -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Privacy</h4>
+      <p>All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</p>
+	  <h4>Instructions</h4>
+	  <p><strong>This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you could delete all the saved sites, what you see here is not online and is not shared.</strong><br><br>
+	  1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to the image and click on the "X".<br><br>
+	  2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL, done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the same PC.<br><br>
+	  *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
@@ -209,10 +225,7 @@
     <span class="close">&times;</span>
 	<p>All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</p>
 
-    <p><strong>This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you could delete all the saved sites, what you see here is not online and is not shared.</strong><br><br>
-	  1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to the image and click on the "X".<br><br>
-	  2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL, done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the same PC.<br><br>
-	  *if you can't see site previews, change your IP by turning off and restarting your modem.</p>
+    
   </div>
 
 </div>
