--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
     <div class="grid-wrapper">
       <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <!--<button id="myBtn">Instructions & Privacy</button>-->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Privacy & Instructions</a>
+    <button data-target="modal1" class="btn modal-trigger">Modal</button>
+
 
         <select class="lang_selector" align="right">
 		  <option value="el">Ελληνικά</option>
@@ -218,6 +219,7 @@
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
     </div>
   </div>
+  
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
