--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <footer class="main-footer">
     <div class="grid-wrapper">
       <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
-<!--<button id="myBtn">Instructions & Privacy</button>-->
+<button id="myBtn">Instructions & Privacy</button>
     <button data-target="modal1" class="btn modal-trigger">Modal</button>
 
 
@@ -205,6 +205,7 @@
 
 
 <!-- The Modal -->
+
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4>Privacy</h4>
