--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="grid-wrapper">
       <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions & Privacy</button>
-    <button data-target="modal1" class="btn modal-trigger">Modal</button>
+    <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
 
 
         <select class="lang_selector" align="right">
@@ -226,9 +226,13 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-	<p>All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</p>
-
-    
+	      <h4>Privacy</h4>
+      <p>All product names, logos, and brands are property of their respective owners. All company, product and service names used in this website are for identification purposes only.</p>
+	  <h4>Instructions</h4>
+	  <p><strong>This page works thanks to the data saved on your PC, if you clean your Browser from Cookies you could delete all the saved sites, what you see here is not online and is not shared.</strong><br><br>
+	  1) You can add as many sites as you want, you have an example of how they will look, to delete them just go to the image and click on the "X".<br><br>
+	  2) To add your sites go to the empty box with the "+" symbol, a form will open where you can insert the URL, done this click on "Add", the site will appear among the tabs on the page every time you enter the site from the same PC.<br><br>
+	  *if you can't see site previews, change your IP by turning off and restarting your modem.</p>    
   </div>
 
 </div>
