--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   cursor: pointer;
 }
 	</style>
+<script data-ad-client="ca-pub-3269987799484354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
