--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <nav class="main-header">
     <div class="grid-wrapper">
       <p></p><a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a><strong> Hellaz.START</strong>™ <div class="share">
-		<i class="fas fa-newspaper"></i> <a href="https://www.news.gr/ target="_blank">NEWS</a>  &nbsp; <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; <i class="fas fa-tachometer-alt"></i> <a href="https://urlz.gr/page/speed" target="_blank">SPEED TEST</a> &nbsp; <i class="fas fa-external-link-alt"></i> <a href="https://urlz.gr/" target="_blank">Short URL</a> &nbsp; <i class="fas fa-globe-europe"></i> <a href="https://netz.gr/" target="_blank">Free Host</a></div>
+		<i class="fas fa-browser"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; <i class="fas fa-tachometer-alt"></i> <a href="https://urlz.gr/page/speed" target="_blank">SPEED</a> &nbsp; <i class="fas fa-external-link-alt"></i> <a href="https://urlz.gr/" target="_blank">SHORTEN</a> &nbsp; <i class="fas fa-globe-europe"></i> <a href="https://netz.gr/" target="_blank">HOST</a></div>
 		</div>
   </nav>
  
@@ -185,8 +185,8 @@
 
 
         <select class="lang_selector" align="right">
-		  <option value="el">Ελληνικά</option>
-		  <option value="en">English</option>
+		      <option value="el">Ελληνικά</option>
+		      <option value="en">English</option>
           <option value="ru">Русский</option>
           <option value="fr">French</option>
           <option value="es">Spanish</option>
