--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@
 <body>
   <nav class="main-header">
     <div class="grid-wrapper">
-      <p></p><a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a><strong> Hellaz.START</strong>™ <div class="share">
-		<i class="fas fa-browser"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; <i class="fas fa-tachometer-alt"></i> <a href="https://urlz.gr/page/speed" target="_blank">SPEED</a> &nbsp; <i class="fas fa-external-link-alt"></i> <a href="https://urlz.gr/" target="_blank">SHORTEN</a> &nbsp; <i class="fas fa-crypto"></i> <a href="https://urlz.gr/minepi" target="_blank">MINE</a> &nbsp; <i class="fas fa-globe-europe"></i> <a href="https://netz.gr/" target="_blank">HOST</a></div>
+      <p><a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a><strong> Hellaz.START</strong>™ </p>
+    <div class="share">
+		<i class="fas fa-browser"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
+    <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
+    <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; 
+    <i class="fas fa-tachometer-alt"></i> <a href="https://urlz.gr/page/speed" target="_blank">SPEED</a> &nbsp; 
+    <i class="fas fa-external-link-alt"></i> <a href="https://urlz.gr/" target="_blank">SHORTEN</a> &nbsp; 
+    <i class="fas fa-crypto"></i> <a href="https://urlz.gr/minepi" target="_blank">MINE</a> &nbsp; 
+    <i class="fas fa-globe-europe"></i> <a href="https://netz.gr/" target="_blank">HOST</a></div>
 		</div>
   </nav>
  
