--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <nav class="main-header">
     <div class="grid-wrapper">
-      <p><a href='http://hellaz.net'><img src='img/hellaz_120.jpg'/></a><strong> Hellaz.START</strong>™ </p>
+    <a href='http://hellaz.net'><img src='img/hellaz_120.jpg' width='100px'/></a><strong> Hellaz.START</strong>™
     <div class="share">
 		<i class="fas fa-browser"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
     <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
