--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
   cursor: pointer;
 }
 	</style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37136714-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-37136714-3');
+</script>
+
 <script data-ad-client="ca-pub-3269987799484354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
