--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
 <body>
   <nav class="main-header">
-    <div class="grid-wrapper">
-    <a href='http://hellaz.net'><img src='img/hellaz_120.jpg' width='100px'/></a><strong> Hellaz.START</strong>™
-      <div class="share">
+    <div class="nav-wrapper">
+    <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/></a><strong> Hellaz.START</strong>™
+      <div class="share" class="right hide-on-med-and-down">
 		  <i class="fas fa-chrome"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
       <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
       <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; 
@@ -165,7 +165,7 @@
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    
+
     <!--RSS --> 
   <main>
   <div class="container">
