--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <nav class="main-header">
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/></a><strong> Hellaz.START</strong>™
-      <div id='nav-mobile' class="right hide-on-med-and-down">
+      <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <i class="fas fa-chrome"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
       <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
       <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; 
