--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
   <nav class="main-header">
     <div class="nav-wrapper">
-    <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/></a><strong> Hellaz.START</strong>™
+    <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <i class="fas fa-chrome"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
       <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
