--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <i class="fas fa-chrome"></i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  &nbsp; 
-      <i class="fas fa-sun"></i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  &nbsp; 
-      <i class="fas fa-image"></i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  &nbsp; 
-      <i class="fas fa-tachometer-alt"></i> <a href="http://urlz.gr/page/speed" target="_blank">SPEED</a> &nbsp; 
-      <i class="fas fa-external-link-alt"></i> <a href="http://urlz.gr/" target="_blank">SHORTEN</a> &nbsp; 
-      <i class="fas fa-btc"></i> <a href="http://urlz.gr/minepi" target="_blank">MINE</a> &nbsp; 
-      <i class="fas fa-globe-europe"></i> <a href="https://netz.gr/" target="_blank">HOST</a>
-      </div>
+		  <li class="fas fa-chrome"> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  </li> 
+      <li class="fas fa-sun"> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  </li> 
+      <li class="fas fa-image"> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  </li> 
+      <li class="fas fa-tachometer-alt"> <a href="http://urlz.gr/page/speed" target="_blank">SPEED</a> </li> 
+      <li class="fas fa-external-link-alt"> <a href="http://urlz.gr/" target="_blank">SHORTEN</a> </li> 
+      <li class="fas fa-btc"> <a href="http://urlz.gr/minepi" target="_blank">MINE</a> </li> 
+      <li class="fas fa-globe-europe"> <a href="https://netz.gr/" target="_blank">HOST</a> </li>
+      </ul>
 		</div>
   </nav>
  
