--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 
 <body>
-  <nav class="main-header">
+  <nav >
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
