--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 </head>
 
 <body>
-  <nav >
+  <nav>
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <li class="fas fa-chrome"> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a>  </li> 
-      <li class="fas fa-sun"> <a href="https://freemeteo.gr" target="_blank">WEATHER</a>  </li> 
+		  <li><i class="material-icons left">browser</i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a></li> 
+      <li class="fas fa-sun"> <a href="https://freemeteo.gr" target="_blank">WEATHER</a></li> 
       <li class="fas fa-image"> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  </li> 
-      <li class="fas fa-tachometer-alt"> <a href="http://urlz.gr/page/speed" target="_blank">SPEED</a> </li> 
+      <li class="fas fa-tachometer-alt"> <a href="http://urlz.gr/page/speed" target="_blank">SPEED</a></li> 
       <li class="fas fa-external-link-alt"> <a href="http://urlz.gr/" target="_blank">SHORTEN</a> </li> 
       <li class="fas fa-btc"> <a href="http://urlz.gr/minepi" target="_blank">MINE</a> </li> 
       <li class="fas fa-globe-europe"> <a href="https://netz.gr/" target="_blank">HOST</a> </li>
