--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <li><i class="material-icons left">web</i> <a href="https://cryptotabbrowser.com/22784574" target="_blank">BROWSE</a></li> 
-      <li><i class="material-icons left">Brightness7</i> <a href="https://freemeteo.gr" target="_blank">WEATHER</a></li> 
-      <li><i class="material-icons left">ImageSearch</i> <a href="http://urlz.gr/unsplash" target="_blank">IMAGES</a>  </li> 
-      <li><i class="material-icons left">Speed</i> <a href="http://urlz.gr/page/speed" target="_blank">SPEED</a></li> 
-      <li><i class="material-icons left">Link</i> <a href="http://urlz.gr/" target="_blank">SHORTEN</a> </li> 
-      <li><i class="material-icons left">LocalAtm</i><a href="http://urlz.gr/minepi" target="_blank">MINE</a> </li> 
-      <li><i class="material-icons left">Public</i> <a href="https://netz.gr/" target="_blank">HOST</a> </li>
+		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="material-icons left">web</i> BROWSE</a></li> 
+      <li><a href="https://freemeteo.gr" target="_blank"><i class="material-icons left">Brightness7</i> WEATHER</a></li> 
+      <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="material-icons left">ImageSearch</i> IMAGES</a>  </li> 
+      <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="material-icons left">Speed</i> SPEED</a></li> 
+      <li><a href="http://urlz.gr/" target="_blank"><i class="material-icons left">Link</i> SHORTEN</a> </li> 
+      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="material-icons left">LocalAtm</i>MINE</a> </li> 
+      <li><a href="https://netz.gr/" target="_blank"><i class="material-icons left">Public</i> HOST</a> </li>
       </ul>
 		</div>
   </nav>
