--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="material-icons left">web</i> BROWSE</a></li> 
       <li><a href="https://freemeteo.gr" target="_blank"><i class="material-icons left">Brightness7</i> WEATHER</a></li> 
-      <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="material-icons left">ImageSearch</i> IMAGES</a>  </li> 
+      <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="material-icons left">ImageSearch</i> IMAGES</a> </li> 
       <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="material-icons left">Speed</i> SPEED</a></li> 
-      <li><a href="http://urlz.gr/" target="_blank"><i class="material-icons left">Link</i> SHORTEN</a> </li> 
-      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="material-icons left">LocalAtm</i>MINE</a> </li> 
-      <li><a href="https://netz.gr/" target="_blank"><i class="material-icons left">Public</i> HOST</a> </li>
+      <li><a href="http://urlz.gr/" target="_blank"><i class="material-icons left">Link</i> SHORTEN</a></li> 
+      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="material-icons left">LocalAtm</i> MINE</a></li> 
+      <li><a href="https://netz.gr/" target="_blank"><i class="material-icons right">cloud</i> HOST</a></li>
       </ul>
 		</div>
   </nav>
