--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="material-icons left">web</i> BROWSE</a></li> 
+		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="fas fa-sun"></i> BROWSE</a></li> 
       <li><a href="https://freemeteo.gr" target="_blank"><i class="material-icons left">Brightness7</i> WEATHER</a></li> 
       <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="material-icons left">ImageSearch</i> IMAGES</a> </li> 
       <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="material-icons left">Speed</i> SPEED</a></li> 
