--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-    <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> Hellaz.START</strong>™</a>
+    <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="fas fa-chrome"></i></i> BROWSE</a></li> 
-      <li><a href="https://freemeteo.gr" target="_blank"> <i class="fas fa-sun"></i> WEATHER</a></li> 
+      <li><a href="https://freemeteo.gr" target="_blank"><i class="fas fa-sun"></i> WEATHER</a></li> 
       <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="fas fa-image"></i> IMAGES</a> </li> 
       <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="fas fa-tachometer-alt"></i> SPEED</a></li> 
       <li><a href="http://urlz.gr/" target="_blank"><i class="fas fa-external-link-alt"></i> SHORTEN</a></li> 
