--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="fas fa-chrome"></i></i> BROWSE</a></li> 
+		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="fab fa-chrome"></i></i> BROWSE</a></li> 
       <li><a href="https://freemeteo.gr" target="_blank"><i class="fas fa-sun"></i> WEATHER</a></li> 
       <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="fas fa-image"></i> IMAGES</a> </li> 
       <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="fas fa-tachometer-alt"></i> SPEED</a></li> 
       <li><a href="http://urlz.gr/" target="_blank"><i class="fas fa-external-link-alt"></i> SHORTEN</a></li> 
-      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="fas fa-btc"></i> MINE</a></li> 
+      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="fas fa-atm"></i> MINE</a></li> 
       <li><a href="https://netz.gr/" target="_blank"><i class="fas fa-globe-europe"></i> HOST</a></li>
       </ul>
 		</div>
