--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
-		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
-      <li><a href="https://freemeteo.gr" target="_blank"><i class="fas fa-cloud-sun"></i> WEATHER</a></li> 
-      <li><a href="http://urlz.gr/unsplash" target="_blank"><i class="fas fa-image"></i> IMAGES</a> </li> 
-      <li><a href="http://urlz.gr/page/speed" target="_blank"><i class="fas fa-tachometer-alt"></i> SPEED</a></li> 
-      <li><a href="http://urlz.gr/" target="_blank"><i class="fas fa-external-link-alt"></i> SHORTEN</a></li> 
-      <li><a href="http://urlz.gr/minepi" target="_blank"><i class="fas fa-wallet"></i> MINE</a></li> 
-      <li><a href="https://netz.gr/" target="_blank"><i class="fas fa-globe-europe"></i> HOST</a></li>
+		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
+      <li><a href="https://freemeteo.gr" target="_blank" alt="Check the Weather"><i class="fas fa-cloud-sun"></i> WEATHER</a></li> 
+      <li><a href="http://urlz.gr/unsplash" target="_blank" alt="Find your Images"><i class="fas fa-image"></i> IMAGES</a> </li> 
+      <li><a href="http://urlz.gr/page/speed" target="_blank" alt="Check your Net Speed"><i class="fas fa-tachometer-alt"></i> SPEED</a></li> 
+      <li><a href="http://urlz.gr/" target="_blank" alt="Shorten your Links"><i class="fas fa-external-link-alt"></i> SHORTEN</a></li> 
+      <li><a href="http://urlz.gr/minepi" target="_blank" alt="Earn with Pi"><i class="fas fa-wallet"></i> MINE</a></li> 
+      <li><a href="https://netz.gr/" target="_blank" alt="Host your Website Free"><i class="fas fa-globe-europe"></i> HOST</a></li>
       </ul>
 		</div>
   </nav>
