--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
  
  <! -- FOOTER -->
  
-  <footer class="main-footer">
-    <div class="grid-wrapper">
+ <footer class="page-footer">
+  <div class="grid-wrapper">
       <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions & Privacy</button>
     <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
