--- a/index.html
+++ b/index.html
@@ -197,10 +197,11 @@
  
  <footer class="page-footer">
   <div class="grid-wrapper">
-      <p>&copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
+    <div class="footer-copyright">
+      &copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions & Privacy</button>
     <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
-
+    
 
         <select class="lang_selector" align="right">
 		      <option value="el">Ελληνικά</option>
@@ -217,7 +218,7 @@
           <option value="he">Hebrew</option>
           <option value="cs">Czech</option>
 		</select>
-      </p>
+  </div>
 <p><br/> </p>
     </div>         
   </footer>
