--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
     
 
-        <select class="lang_selector" align="right">
+        <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
 		      <option value="el">Ελληνικά</option>
 		      <option value="en">English</option>
           <option value="ru">Русский</option>
