--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
  
  <footer class="page-footer">
   <div class="grid-wrapper">
-    <div class="footer-copyright">
+    <div class="footer-copyright col s6">
       &copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | 
       <!-- Trigger/Open The Modal -->
 <button id="myBtn">Instructions & Privacy</button>
     <!--<button data-target="modal1" class="btn modal-trigger">Modal</button>-->
     
-    <div class="input-field col s12">
+    <div class="input-field col s6">
         <select class="lang_selector" align="right" class="grey-text text-lighten-4 right">
 		      <option value="el">Ελληνικά</option>
 		      <option value="en">English</option>
