--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
  <! -- FOOTER -->
  
  <footer class="page-footer">
-  <div class="navbar-fixed">
+  <div class="grid-wrapper">
     <div class="footer-copyright">
       &copy; 2020 HellazStart by <a href="https://hellaz.net" target="_blank">Hellaz.Team</a> | <a class="contacts_text" href="mailto:nomail@hellaz">contact</a> | 
       <!-- Trigger/Open The Modal -->
