--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 </head>
 
 <body>
+<div class="navbar-fixed">
   <nav class="transparent z-depth-0">
-    <div class="nav-wrapper blue">
+    <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
@@ -100,6 +101,7 @@
       </ul>
 		</div>
   </nav>
+  </div>
  
 
   <div class="content-wrapper center-wrapper">   
