--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <body>
 <div class="navbar-fixed">
-  <nav class="transparent z-depth-0">
+  <nav >
     <div class="nav-wrapper opacity: 0.5">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
