--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 <body>
 <div class="navbar-fixed">
-  <nav >
-    <div class="nav-wrapper opacity: 0.5">
+  <nav class="opacity-0.5 z-depth-0">
+    <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
 		  <li><a href="https://cryptotabbrowser.com/22784574" target="_blank" alt="Upgrade your Browser"><i class="fas fa-window-maximize"></i></i> BROWSE</a></li> 
