--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 </head>
 
 <body>
-<div class="navbar-fixed">
-  <nav class="opacity-0.5 z-depth-0">
+<div class="navbar-fixed blue">
+  <nav class="transparent z-depth-0" style="opacity:0.5">
     <div class="nav-wrapper">
     <a href='http://hellaz.net' class='brand-logo'><img src='img/hellaz_120.jpg' width='100px'/><strong> .START</strong>™</a>
       <ul id='nav-mobile' class="right hide-on-med-and-down">
@@ -101,7 +101,7 @@
       </ul>
 		</div>
   </nav>
-  </div>
+</div>
  
 
   <div class="content-wrapper center-wrapper">   
